feat: refactor casos retrieval logic for improved filtering; update database seed files for agentes and casos

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,8 @@ services:
     image: postgres:17
     restart: unless-stopped
     ports:
-      - "5438:5432"
+      - "5432:5432"
+      # se já tem o PostgreSQL, mude para 5436:5432
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
