--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node --watch server.js",
     "db:reset": "npm run db:down && npm run db:up && npm run db:wait && npm run db:migrate && npm run db:seed",
-    "db:up": "docker-compose up -d",
+    "db:up": "docker compose --env-file .env up -d",
     "db:down": "docker-compose down -v",
     "db:wait": "timeout 5",
     "db:migrate": "npx knex migrate:latest",
